# orthoai-v2

./: CONTRIBUTING.md  LICENSE-COMMERCIAL  LICENSE-MIT  README.md  pyproject.toml
api/: main.py
docker/: Dockerfile.open  docker-compose.yml
engine_stub/: README.md  __init__.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx
orthoai/agents/: base.py  orchestrator.py
orthoai/demo/: frame_generator.py  presets.py  synthetic.py
orthoai/evaluation/: benchmark.py  metrics.py
orthoai/models/: charm.py  dgcnn.py
paper/: orthoai_v2_arxiv.tex
scripts/: evaluate.py
tests/: test_all.py  test_models.py
